test/testdata/variables/blank_access_error.lox
print _; // error: identifier _ cannot be used in a non-assignment expression
